[tool.poetry]
name = "python-poetry-example"
version = "0.1.0"
description = ""
authors = ["Cooper <cooperxmiller@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
typer = "^0.6.1"

[tool.poetry.dev-dependencies]
pytest = "^7.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
my-app = "python_poetry_example.main:app"
